--- a/juego/index.html
+++ b/juego/index.html
@@ -14,7 +14,7 @@
 
 <script type="text/javascript">
 
-var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'Prototipo', { preload: preload, create: create, update: update, render: render });
+var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'v2', { preload: preload, create: create, update: update, render: render });
 
 function preload() {
 
@@ -32,7 +32,7 @@ var map;
 var tileset;
 var layer;
 var player;
-var facing = 'left';
+var facing = 'right';
 var jumpTimer = 0;
 var cursors;
 var jumpButton;
@@ -40,9 +40,12 @@ var bg;
 var text;
 var runner;
 var vel_camara;
+var scoreText;
+var bestScoreText;
+var puntaje;
+var string;
 
 function create() {
-
     game.physics.startSystem(Phaser.Physics.ARCADE);
 
     game.stage.backgroundColor = '#000000';
@@ -75,20 +78,22 @@ function create() {
     player.animations.add('left', [0, 1, 2, 3], 10, true);
     player.animations.add('turn', [4], 20, true);
     player.animations.add('right', [5, 6, 7, 8], 10, true);
-
+	
     //para que el juego sea como un runner
     // hay que dejar runner como true 
     runner = !true;
     if (!runner) {
         game.camera.follow(player);
     };
+	
+	
 
 
     cursors = game.input.keyboard.createCursorKeys();
     jumpButton = game.input.keyboard.addKey(Phaser.Keyboard.SPACEBAR);
-
-    // crearTexto();
-
+	
+	createScore();
+	
     vel_camara = 2;
 
 }
@@ -99,7 +104,7 @@ function update() {
 
     game.physics.arcade.collide(player, layer);
 
-    player.body.velocity.x = 0;
+    player.body.velocity.x = 125;
 
     if (runner) {
         var posx = game.camera.x;
@@ -108,18 +113,7 @@ function update() {
     };
     
 
-    if (cursors.left.isDown)
-    {
-
-        player.body.velocity.x = -250;
-
-        if (facing != 'left')
-        {
-            player.animations.play('left');
-            facing = 'left';
-        }
-    }
-    else if (cursors.right.isDown)
+    if (cursors.right.isDown)
     {
         player.body.velocity.x = 250;
 
@@ -154,7 +148,8 @@ function update() {
         jumpTimer = game.time.now + 750;
     }
 
-
+	string = "Score: "+game.camera.x;
+	updateScore();
 
 }
 
@@ -163,28 +158,25 @@ function render () {
     // game.debug.text(game.time.physicsElapsed, 32, 32);
     // game.debug.body(player);
     // game.debug.bodyInfo(player, 16, 24);
-    // updateText();
+    //updateText();
 
 }
 
-function crearTexto() {
-    text = game.add.text(50, 150, "as !", {
+function createScore() {
+     scoreText = game.add.text(700, 50, "hola", {
         font: "25px Arial",
-        align: "center"
+        align: "center",
+		fill: "white",
+		stroke: "black"
     });
-
 }
 
-function updateText() {
-    var string = "+/- Velocidad camara\n ad";
-    text.x = game.camera.x+100;
-    text.y = game.camera.y+300;
-
-
-
-    text.anchor.setTo(0.5, 0.5);
-    text.setText(string);
-
+function updateScore(){
+	string = "Score: " + game.camera.x;
+	scoreText.x = game.camera.x +700;
+	scoreText.y = game.camera.y +50;
+	scoreText.anchor.setTo(0.5,0.5);
+	scoreText.setText (string);
 }
 </script>
 
