--- a/juego/index.html
+++ b/juego/index.html
@@ -57,8 +57,8 @@ function create() {
 
     map.addTilesetImage('tiles-1');
 
-    // map.setCollisionByExclusion([ 13, 14, 15, 16, 46, 47, 48, 49, 50, 51 ]);
-    map.setCollisionByExclusion([  ]);
+     map.setCollisionByExclusion([ 13, 14, 15, 16, 46, 47, 48, 49, 50, 51 ]);
+    //map.setCollisionByExclusion([  ]);
     layer = map.createLayer('Tile Layer 1');
 
     //  Un-comment this on to see the collision tiles
@@ -93,6 +93,7 @@ function create() {
     jumpButton = game.input.keyboard.addKey(Phaser.Keyboard.SPACEBAR);
 	
 	createScore();
+
 	
     vel_camara = 2;
 
@@ -111,44 +112,12 @@ function update() {
         var posy = player.body.y -250;
         game.camera.setPosition(posx + vel_camara, posy);
     };
-    
-
-    if (cursors.right.isDown)
-    {
-        player.body.velocity.x = 250;
-
-        if (facing != 'right')
-        {
-            player.animations.play('right');
-            facing = 'right';
-        }
-    }
-    else
-    {
-        if (facing != 'idle')
-        {
-            player.animations.stop();
-
-            if (facing == 'left')
-            {
-                player.frame = 0;
-            }
-            else
-            {
-                player.frame = 5;
-            }
-
-            facing = 'idle';
-        }
-    }
-    
+    player.frame = 5;
     if (jumpButton.isDown && player.body.onFloor() && game.time.now > jumpTimer)
     {
         player.body.velocity.y = -250;
         jumpTimer = game.time.now + 750;
     }
-
-	string = "Score: "+game.camera.x;
 	updateScore();
 
 }
@@ -162,6 +131,9 @@ function render () {
 
 }
 
+/***
+Funcion para crear el label scoreText = Muestra el puntaje actual de la partida
+***/
 function createScore() {
      scoreText = game.add.text(700, 50, "hola", {
         font: "25px Arial",
@@ -170,9 +142,11 @@ function createScore() {
 		stroke: "black"
     });
 }
-
+/***
+Funcion para mantener actualizado el puntaje
+***/
 function updateScore(){
-	string = "Score: " + game.camera.x;
+	string = "Score: " + Math.floor(game.camera.x/4);
 	scoreText.x = game.camera.x +700;
 	scoreText.y = game.camera.y +50;
 	scoreText.anchor.setTo(0.5,0.5);
